tests/fixtures/invalid/ord_bytes.py
# Cannot call ord() with Bytes
x = ord(b"hello")
